# shapes_api

./: .gitignore  Cargo.toml  README.md
setup/: compose.yml  setup.sql
shape_provider/: Cargo.toml
shape_provider/src/: lib.rs
shape_provider/src/shape_providers/: mod.rs  wide_flange_provider.rs
shape_repositories/: Cargo.toml
shape_repositories/src/: lib.rs
shape_repositories/src/repositories/: angle_repository.rs  cee_channel_repository.rs  double_angle_repository.rs  h_pile_repository.rs  hollow_structural_section_repository.rs  misc_beam_repository.rs  misc_channel_repository.rs  misc_tee_repository.rs  mod.rs  pipe_repository.rs  round_hollow_structural_section_repository.rs  structural_beam_repository.rs  structural_tee_repository.rs  wide_flange_repository.rs  wide_flange_tee_repository.rs
shapes/src/: lib.rs
shapes/src/aisc_shapes/: aisc_shape.rs  angle.rs  cee_channel.rs  double_angle.rs  errors.rs  h_pile.rs  hollow_structural_section.rs  misc_beam.rs  misc_channel.rs  misc_tee.rs  mod.rs  pipe.rs  round_hollow_structural_section.rs  shape_builder.rs  shape_repository.rs  shape_type.rs  structural_beam.rs  (+3 more)
shapes_api/: Cargo.toml
shapes_api/src/: main.rs
sql/: create_tables.sql
sql_generation/: Cargo.toml  aisc-shapes-database-v16.0.csv  angles.sql  cee_channels.sql  double_angles.sql  h_piles.sql  hollow_structural_sections.sql  misc_beams.sql  misc_channels.sql  misc_tees.sql  pipes.sql  round_hollow_structural_sections.sql  structural_beams.sql  structural_tees.sql  wide_flange_tees.sql  wide_flanges.sql
sql_generation/src/: main.rs
