[package]
name = "shapes_api"
version = "0.1.0"
edition = "2024"

[dependencies]
shapes = { path = "../shapes" }
shape_repositories = {path = "../shape_repositories"}
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
tokio = { version = "1", features = ["full"] }